--- a/package.json
+++ b/package.json
@@ -9,19 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.6",
+    "@react-google-maps/api": "^2.19.3",
+    "@types/google.maps": "^3.55.3",
+    "@types/gsap": "^3.0.0",
+    "axios": "^1.6.7",
+    "framer-motion": "^11.0.8",
+    "gsap": "^3.12.5",
+    "next": "14.0.4",
+    "nodemailer": "^6.9.11",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-fast-marquee": "^1.6.4",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "typescript": "^5"
   }
 }
