--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
+    "react-icons": "^5.0.1",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
