--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.0.1",
+    "sass": "^1.71.1",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
